# pqc-envoy-filter-planning

./: .bazelrc  .gitignore  AGENTS.md  AI_AGENT_IMPLEMENTATION_ROADMAP_PROMPT.md  AI_AGENT_PROJECT_PLANNING_ROADMAP.md  BUILD.bazel  CODE_MODE_IMPLEMENTATION_PROMPT.md  DOCKER_VERIFICATION.md  GITIGNORE_PLAN.md  MODULE.bazel  PROJECT_CONTEXT.md  README.md  STEP_1.2_BUILD_SYSTEM_SUMMARY.md  STEP_1_SUMMARY.md  STEP_2_TDD_IMPLEMENTATION_SUMMARY.md  WORKSPACE
.bob/rules-advance/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-code/: AGENTS.md
.bob/rules-plan/: AGENTS.md
.github/workflows/: bazel-ci.yml  dev-docker-build.yml
docker/: Dockerfile.dev  docker-compose.yml
docs/: BAZEL_ENVOY_DEBUGGING_CHECKLIST.md  OBSERVABILITY_FRAMEWORK.md  PANEL_TALK_TRACK_AND_WATSONX_LIVE_CHECKLIST.md  PQC_AGENT_REQUEST_SCHEMA.json  PQC_AGENT_RESPONSE_SCHEMA.json  WATSONX_POLICY_SERVICE.md  WATSONX_PQC_MVP_PLAN.md
services/watsonx_policy_service/: .env.example  Dockerfile  README.md
services/watsonx_policy_service/app/: __init__.py  mock_policy.py  models.py  server.py  service.py  settings.py  watsonx_client.py
services/watsonx_policy_service/tests/: test_policy_service.py
src/config/: BUILD.bazel  feature_flags.proto  policy.proto  pqc_filter.proto  validator.cc  validator.h
src/filters/pqc/: BUILD.bazel  agent_policy_client.cc  agent_policy_client.h  config.cc  context.cc  context.h  fallback_manager.cc  fallback_manager.h  logger.cc  logger.h  metrics.cc  metrics.h  policy_engine.cc  policy_engine.h  pqc_filter.cc  pqc_filter.h  pqc_network_filter.cc  pqc_network_filter.h
test/filters/pqc/: BUILD.bazel  agent_policy_client_test.cc  context_test.cc  fallback_manager_test.cc  metrics_test.cc  policy_engine_test.cc  pqc_filter_test.cc  pqc_network_filter_test.cc
