# Root BUILD.bazel
# Required by Bazel to recognize the repo root as a package.
# envoy_extension_package() in sub-packages references //:mobile_library
# which is declared here by envoy_extension_package() at root level.

load(
    "@envoy//bazel:envoy_build_system.bzl",
    "envoy_cc_library",
    "envoy_extension_package",
)

licenses(["notice"])  # Apache 2

envoy_extension_package()
