# MODULE.bazel - Bazel Bzlmod configuration for pqc-envoy-filter
#
# This project currently uses WORKSPACE for dependency management.
# Dependencies are defined in the WORKSPACE file via http_archive rules.
#
# Future migration to Bzlmod is planned once Envoy upstream publishes
# official Bazel Central Registry (BCR) modules for their build system.
# See: https://github.com/bazelbuild/bazel-central-registry
#
# Current dependency graph (via WORKSPACE):
#   envoy v1.28.0    -> main build system and filter API
#   rules_proto      -> protobuf compilation
#   com_google_protobuf -> protobuf runtime
#   com_google_absl  -> Abseil C++ utilities
#   com_google_googletest -> unit testing

module(
    name = "pqc_envoy_filter",
    version = "0.1.0",
    compatibility_level = 1,
)
