load(
    "@envoy//bazel:envoy_build_system.bzl",
    "envoy_cc_library",
    "envoy_extension_package",
)

licenses(["notice"])

envoy_extension_package()

filegroup(
    name = "all_sources",
    srcs = glob([
        "*.cc",
        "*.h",
    ]),
)

envoy_cc_library(
    name = "pqc_filter_lib",
    srcs = [
        "pqc_filter.cc",
    ],
    hdrs = [
        "pqc_filter.h",
    ],
    repository = "@envoy",
    deps = [
        "//src/config:pqc_filter_cc_proto",
        "@envoy//envoy/http:filter_interface",
        "@envoy//envoy/server:filter_config_interface",
        "@envoy//source/common/common:assert_lib",
        "@envoy//source/common/http:header_map_lib",
        "@envoy//source/common/http:headers_lib",
        "@com_google_absl//absl/strings",
    ],
)
